# LSTME_JET_FRAMEWORK

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  lstme.cmake  refactoring.sh  scripts.ipynb  submodule.sh  tutorial.md
src/: CMakeLists.txt  macros.hpp
src/examples/example_utils/: clara_utils.h  io_utils.h  io_utils.hpp
src/examples/hello_fluid_sim/: CMakeLists.txt  main.cpp
src/examples/hybrid_liquid_sim/: CMakeLists.txt  main.cpp
src/examples/level_set_liquid_sim/: CMakeLists.txt  main.cpp
src/examples/obj2sdf/: CMakeLists.txt  main.cpp
src/examples/particles2obj/: CMakeLists.txt  main.cpp
src/examples/particles2xml/: CMakeLists.txt  main.cpp
src/examples/playground/: CMakeLists.txt  main.cpp  my_physics_solver.cpp  my_physics_solver.h
src/examples/porous/: CMakeLists.txt  main.cpp
src/examples/python_examples/: apic_example01.py  apic_example02.py  apic_example03.py  collider_emitter_anim_example.py  points_to_implicit.py  smoke_example01.py
src/examples/smoke_sim/: CMakeLists.txt  main.cpp
src/examples/sph_kpconv2D/: CMakeLists.txt  main.cpp
src/examples/sph_kpconv3D/: CMakeLists.txt  main.cpp
src/examples/sph_sim/: CMakeLists.txt  main.cpp
src/examples/thesis_fem/: CMakeLists.txt  main.cpp
src/jet/: CMakeLists.txt  advection_solver2.cpp  advection_solver3.cpp  animation.cpp  anisotropic_points_to_implicit2.cpp  anisotropic_points_to_implicit3.cpp  apic_solver2.cpp  apic_solver3.cpp  bcc_lattice_point_generator.cpp  box2.cpp  box3.cpp  cell_centered_scalar_grid2.cpp  cell_centered_scalar_grid3.cpp  cell_centered_vector_grid2.cpp  cell_centered_vector_grid3.cpp  collider2.cpp  collider3.cpp  collider_set2.cpp  collider_set3.cpp  collocated_vector_grid2.cpp  collocated_vector_grid3.cpp  constant_scalar_field2.cpp  constant_scalar_field3.cpp  constant_vector_field2.cpp  constant_vector_field3.cpp  cubic_semi_lagrangian2.cpp  cubic_semi_lagrangian3.cpp  custom_implicit_surface2.cpp  custom_implicit_surface3.cpp  custom_scalar_field2.cpp  custom_scalar_field3.cpp  custom_vector_field2.cpp  custom_vector_field3.cpp  cylinder3.cpp  eno_level_set_solver2.cpp  eno_level_set_solver3.cpp  face_centered_grid2.cpp  face_centered_grid3.cpp  factory.cpp  factory.h  (+153 more)
src/jet/animation/: animation.cpp  physics_animation.cpp
src/jet/emitter/: grid_emitter2.cpp  grid_emitter3.cpp  grid_emitter_set2.cpp  grid_emitter_set3.cpp  particle_emitter2.cpp  particle_emitter3.cpp  particle_emitter_set2.cpp  particle_emitter_set3.cpp  point_particle_emitter2.cpp  point_particle_emitter3.cpp  volume_grid_emitter2.cpp  volume_grid_emitter3.cpp  volume_particle_emitter2.cpp  volume_particle_emitter3.cpp
src/jet/factory/: factory.cpp
src/jet/generator/: bcc_lattice_point_generator.cpp  fcc_lattice_point_generator.cpp  grid_point_generator2.cpp  grid_point_generator3.cpp  point_generator2.cpp  point_generator3.cpp  triangle_point_generator.cpp
src/jet/logging/: logging.cpp
src/jet/parallel/: parallel.cpp
src/jet/schema/: basic_types.fbs  flat_data.fbs  grid_system_data2.fbs  grid_system_data3.fbs  particle_system_data2.fbs  particle_system_data3.fbs  point_hash_grid_searcher2.fbs  point_hash_grid_searcher3.fbs  point_kdtree_searcher2.fbs  point_kdtree_searcher3.fbs  point_parallel_hash_grid_searcher2.fbs  point_parallel_hash_grid_searcher3.fbs  point_simple_list_searcher2.fbs  point_simple_list_searcher3.fbs  scalar_grid2.fbs  scalar_grid3.fbs  sph_system_data2.fbs  sph_system_data3.fbs  vector_grid2.fbs  vector_grid3.fbs
src/jet/searcher/: point_hash_grid_searcher2.cpp  point_hash_grid_searcher3.cpp  point_kdtree_searcher2.cpp  point_kdtree_searcher3.cpp  point_neighbor_searcher2.cpp  point_neighbor_searcher3.cpp  point_parallel_hash_grid_searcher2.cpp  point_parallel_hash_grid_searcher3.cpp  point_simple_list_searcher2.cpp  point_simple_list_searcher3.cpp
src/jet/serialization/: serialization.cpp
src/jet/timer/: timer.cpp
src/jet/transfer/: anisotropic_points_to_implicit2.cpp  anisotropic_points_to_implicit3.cpp  points_to_implicit2.cpp  points_to_implicit3.cpp  sph_points_to_implicit2.cpp  sph_points_to_implicit3.cpp  spherical_points_to_implicit2.cpp  spherical_points_to_implicit3.cpp  surface_to_implicit2.cpp  surface_to_implicit3.cpp  triangle_mesh_to_sdf.cpp  zhu_bridson_points_to_implicit2.cpp  zhu_bridson_points_to_implicit3.cpp
src/jet/utility/: fdm_utils.cpp
src/lstme/: CMakeLists.txt  constants.hpp  fbs_helpers.hpp  macros.hpp  pch.hpp  physics_helpers.h  physics_helpers.hpp  private_helpers.hpp
src/lstme/engine/: intersection_query_engine2.hpp  intersection_query_engine3.hpp  list_query_engine2.cpp  list_query_engine2.hpp  list_query_engine3.cpp  list_query_engine3.hpp  nearest_neighbor_query_engine2.hpp  nearest_neighbor_query_engine3.hpp
src/lstme/physics/: bounding_box.cpp  bounding_box.hpp  bounding_box2.cpp  bounding_box2.hpp  bounding_box3.cpp  bounding_box3.hpp  bvh2.cpp  bvh2.hpp  bvh3.cpp  bvh3.hpp  collider2.cpp  collider2.hpp  collider3.cpp  collider3.hpp  collider_set2.cpp  collider_set2.hpp  collider_set3.cpp  collider_set3.hpp  rigid_body_collider2.cpp  rigid_body_collider2.hpp  rigid_body_collider3.cpp  (+1 more)
src/physics/: bounding_box.hpp  bvh2.hpp  bvh3.hpp
src/python/: CMakeLists.txt  advection_solver.cpp  advection_solver.h  animation.cpp  animation.h  anisotropic_points_to_implicit.cpp  anisotropic_points_to_implicit.h  apic_solver.cpp  apic_solver.h  array_accessor.cpp  array_accessor.h  bounding_box.cpp  bounding_box.h  box.cpp  box.h  cell_centered_scalar_grid.cpp  cell_centered_scalar_grid.h  cell_centered_vector_grid.cpp  cell_centered_vector_grid.h  collider.cpp  collider.h  collider_set.cpp  collider_set.h  collocated_vector_grid.cpp  collocated_vector_grid.h  constant_scalar_field.cpp  constant_scalar_field.h  constant_vector_field.cpp  constant_vector_field.h  constants.cpp  constants.h  cubic_semi_lagrangian.cpp  cubic_semi_lagrangian.h  custom_scalar_field.cpp  custom_scalar_field.h  custom_vector_field.cpp  custom_vector_field.h  cylinder.cpp  cylinder.h  eno_level_set_solver.cpp  (+145 more)
(+1587 files in other folders)
